--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,9 +8,10 @@ COPY package*.json ./
 RUN npm install
 
 COPY . .
+RUN npm rebuild
 RUN npm run prisma:generate
 RUN npm run build
 
 EXPOSE 4000
 
-CMD ["node", "dist/index.js"]
+CMD ["sh", "-c", "npm run prisma:migrate && node dist/index.js"]
